Fix html manuals for targets with remote keymaps.  For some reason using an \opt in preamble.tex with an underscore in the name breaks html manuals (but not pdf).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21566 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/rockbox_interface/wps.tex
+++ b/manual/rockbox_interface/wps.tex
@@ -58,28 +58,28 @@ your WPS (While Playing Screen).
 \begin{table}
   \begin{btnmap}{}{}
       \ActionWpsVolUp{} / \ActionWpsVolDown
-      \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsVolUp{} / \ActionRCWpsVolDown}
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsVolUp{} / \ActionRCWpsVolDown}
       & Volume up/down.\\
       %
       \ActionWpsSkipPrev
-       \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsSkipPrev}
+       \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsSkipPrev}
       & Go to beginning of track, or if pressed while in the
         first seconds of a track, go to previous track.\\
       %
       \ActionWpsSeekBack
-      \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsSeekBack}
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsSeekBack}
       & Rewind in track.\\
       %
       \ActionWpsSkipNext
-      \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsSkipNext}
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsSkipNext}
       & Go to next track.\\
       %
       \ActionWpsSeekFwd
-      \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsSeekFwd}
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsSeekFwd}
       & Fast forward in track.\\
       %
       \ActionWpsPlay
-      \opt{HAVE_REMOTE_KEYMAP}{& \ActionRCWpsPlay}
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCWpsPlay}
       & Toggle play/pause.\\
       %
       \ActionWpsStop 
