--- a/manual/platform/h100.tex
+++ b/manual/platform/h100.tex
@@ -8,7 +8,7 @@
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,iriver}
 \edef\UseOption{\UseOption,IRIVER_RC_H100_PAD}
-\edef\UseOption{\UseOption,HAVE_REMOTE_KEYMAP}
+\edef\UseOption{\UseOption,HAVEREMOTEKEYMAP}
 
 \newcommand{\playerman}{Iriver}
 \newcommand{\playertype}{H100}
