--- a/apps/lang/korean.lang
+++ b/apps/lang/korean.lang
@@ -4454,19 +4454,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1 "
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -4601,7 +4601,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "A = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4612,7 +4612,7 @@
     h100,h120,h300: "[정지]: 원상태 복구"
     ipod*,c200*,sa9200: "[메뉴]: 원상태 복구"
     x5,m5: "[녹음]: 원상태 복구"
-    h10,h10_5gb,e200*: "[이전]: 원상태 복구"
+    h10,h10_5gb,e200*,fuze*: "[이전]: 원상태 복구"
     gigabeatf: "[전원]: 원상태 복구"
     mrobe100: "[화면]: 원상태 복구"
     gigabeats: "[뒤]: 원상태 복구"
@@ -10022,17 +10022,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "버튼 조명 시간"
-    fuze,e200*: "휠 조명 시간"
+    fuze*,e200*: "휠 조명 시간"
   </dest>
   <voice>
     *: none
     button_light: "버튼 조명 시간"
-    fuze,e200*: "휠 조명 시간"
+    fuze*,e200*: "휠 조명 시간"
   </voice>
 </phrase>
 <phrase>
