--- a/apps/lang/bulgarian.lang
+++ b/apps/lang/bulgarian.lang
@@ -1352,7 +1352,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -1363,7 +1363,7 @@
     h100,h120,h300: "STOP за отказ"
     ipod*,c200*,sa9200: "MENU за отказ"
     x5,m5: "RECORD за отказ"
-    h10,h10_5gb,e200*: "PREV за отказ"
+    h10,h10_5gb,e200*,fuze*: "PREV за отказ"
     gigabeatf: "POWER за отказ"
     mrobe100: "DISPLAY за отказ"
     gigabeats: "BACK за отказ"
@@ -8844,17 +8844,17 @@
   user: core
   <source>
     *: none
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
-    e200*,c200*: "MSD:"
+    e200*,c200*,fuze*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: ""
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -10206,17 +10206,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Изключване на осветяването на бутоните"
-    fuze,e200*: "Изключване на осветяването на колелото"
+    fuze*,e200*: "Изключване на осветяването на колелото"
   </dest>
   <voice>
     *: none
     button_light: ""
-    fuze,e200*: ""
+    fuze*,e200*: ""
   </voice>
 </phrase>
 <phrase>
