--- a/apps/lang/catala.lang
+++ b/apps/lang/catala.lang
@@ -3830,17 +3830,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Apagat de llum de botons"
-    fuze,e200*: "Apagat de llum de roda"
+    fuze*,e200*: "Apagat de llum de roda"
   </dest>
   <voice>
     *: none
     button_light: "Apagat de llum de botons"
-    fuze,e200*: "Apagat de llum de roda"
+    fuze*,e200*: "Apagat de llum de roda"
   </voice>
 </phrase>
 <phrase>
@@ -4145,7 +4145,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4156,7 +4156,7 @@
     h100,h120,h300: "STOP = Cancel·lar"
     ipod*,c200*,sa9200: "MENU = Cancel·lar"
     x5,m5: "RECORD = Cancel·lar"
-    h10,h10_5gb,e200*: "PREV = Cancel·lar"
+    h10,h10_5gb,e200*,fuze*: "PREV = Cancel·lar"
     gigabeatf: "POWER = Cancel·lar"
     mrobe100: "DISPLAY = Cancel·lar"
     gigabeats: "BACK = Cancel·lar"
@@ -6920,19 +6920,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
