--- a/apps/lang/chinese-simp.lang
+++ b/apps/lang/chinese-simp.lang
@@ -4443,19 +4443,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "磁盘1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "磁盘1"
-    e200*,c200*: "mSD卡"
+    e200*,c200*,fuze*: "mSD卡"
     ondio*: "MMC卡"
   </voice>
 </phrase>
@@ -4590,7 +4590,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4601,7 +4601,7 @@
     h100,h120,h300: "STOP=放弃"
     ipod*,c200*,sa9200: "MENU=放弃"
     x5,m5: "RECORD=放弃"
-    h10,h10_5gb,e200*: "PREV=放弃"
+    h10,h10_5gb,e200*,fuze*: "PREV=放弃"
     gigabeatf: "POWER=放弃"
     mrobe100: "DISPLAY=放弃"
     gigabeats: "BACK=放弃"
@@ -10687,17 +10687,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "按键背光自动关闭时滞"
-    fuze,e200*: "转盘背光自动关闭时滞"
+    fuze*,e200*: "转盘背光自动关闭时滞"
   </dest>
   <voice>
     *: none
     button_light: "按键背光自动关闭时滞"
-    fuze,e200*: "转盘背光自动关闭时滞"
+    fuze*,e200*: "转盘背光自动关闭时滞"
   </voice>
 </phrase>
 <phrase>
