--- a/apps/lang/chinese-trad.lang
+++ b/apps/lang/chinese-trad.lang
@@ -4444,19 +4444,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "磁盤1"
-    e200*,c200*: "Multimedia 卡:"
+    e200*,c200*,fuze*: "Multimedia 卡:"
     ondio*: "MMC卡:"
   </dest>
   <voice>
     *: none
     multivolume: "磁盤1"
-    e200*,c200*: "Multimedia 卡"
+    e200*,c200*,fuze*: "Multimedia 卡"
     ondio*: "mmc卡"
   </voice>
 </phrase>
@@ -4591,7 +4591,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4602,7 +4602,7 @@
     h100,h120,h300: "STOP = 回去"
     ipod*,c200*,sa9200: "MENU = 回去"
     x5,m5: "RECORD = 回去"
-    h10,h10_5gb,e200*: "PREV = 回去"
+    h10,h10_5gb,e200*,fuze*: "PREV = 回去"
     gigabeatf: "POWER = 回去"
     mrobe100: "DISPLAY = 回去"
     gigabeats: "BACK = 回去"
@@ -10674,17 +10674,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "轉盤燈自動關時間"
+    fuze*,e200*: "轉盤燈自動關時間"
   </dest>
   <voice>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </voice>
 </phrase>
 <phrase>
