--- a/apps/lang/czech.lang
+++ b/apps/lang/czech.lang
@@ -3835,15 +3835,15 @@
   user: core
   <source>
     *: none
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
-    fuze,e200*: "Časový limit osvětlení kolečka"
+    fuze*,e200*: "Časový limit osvětlení kolečka"
   </dest>
   <voice>
     *: none
-    fuze,e200*: "Časový limit osvětlení kolečka"
+    fuze*,e200*: "Časový limit osvětlení kolečka"
   </voice>
 </phrase>
 <phrase>
@@ -4130,7 +4130,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4141,7 +4141,7 @@
     h100,h120,h300: "STOP = Vrátit zpět"
     ipod*,c200*,sa9200: "MENU = Vrátit zpět"
     x5,m5: "RECORD = Vrátit zpět"
-    h10,h10_5gb,e200*: "PREV = Vrátit zpět"
+    h10,h10_5gb,e200*,fuze*: "PREV = Vrátit zpět"
     gigabeatf: "POWER = Vrátit zpět"
     mrobe100: "DISPLAY = Vrátit zpět"
     gigabeats: "BACK = Vrátit zpět"
@@ -6904,17 +6904,17 @@
   user: core
   <source>
     *: none
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
