--- a/apps/lang/dansk.lang
+++ b/apps/lang/dansk.lang
@@ -3744,19 +3744,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Hard disk 1"
-    e200*,c200*: "Mikro SD kort"
+    e200*,c200*,fuze*: "Mikro SD kort"
     ondio*: "Multimedie kort"
   </voice>
 </phrase>
@@ -3891,7 +3891,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -3903,7 +3903,7 @@
     h100,h120,h300: "STOP = Fortryd"
     ipod*,c200*: "MENU = Fortryd"
     x5,m5: "OPTAG = Fortryd"
-    h10,h10_5gb,e200*: "FORRIGE = Fortryd"
+    h10,h10_5gb,e200*,fuze*: "FORRIGE = Fortryd"
     gigabeatf: "TÆND/SLUK = Fortryd"
     mrobe100: "VIS = Fortryd"
     gigabeats: "TILBAGE = Fortryd"
@@ -9325,7 +9325,7 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200*: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Building database... %d found (PREV to return)"
     sa9200: "Building database... %d found (REW to return)"
   </source>
   <dest>
@@ -9333,7 +9333,7 @@
     h100,h120,h300: "Bygger database... %d fundet (STOP for at stoppe)"
     ipod*: "Bygger database... %d fundet (FORRIGE for at stoppe)"
     x5,m5,gigabeat*,mrobe100: "Bygger database... %d fundet (VENSTRE for at stoppe)"
-    h10,h10_5gb,e200*,c200*: "Bygger database... %d fundet (FORRIGE for at stoppe)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Bygger database... %d fundet (FORRIGE for at stoppe)"
     sa9200: "Bygger database... %d fundet (SPOL TILBAGE for at stoppe)"
   </dest>
   <voice>
@@ -9937,17 +9937,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Knap-lys sluk"
-    fuze,e200*: "Hjul-lys sluk"
+    fuze*,e200*: "Hjul-lys sluk"
   </dest>
   <voice>
     *: none
     button_light: "Knap-lys sluk"
-    fuze,e200*: "Hjul-lys sluk"
+    fuze*,e200*: "Hjul-lys sluk"
   </voice>
 </phrase>
 <phrase>
@@ -10561,13 +10561,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "SPIL = Ja"
     h100,h120,h300: "NAVI = Ja"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "VÆLG = Ja"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "VÆLG = Ja"
     player: "(SPIL/STOP)"
   </dest>
   <voice>
@@ -10582,14 +10582,14 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Set"
     sa9200: "PLAY = Set"
   </source>
   <dest>
     *: none
     rtc: "Tænd = Indstil"
     h100,h120,h300: "NAVI = Indstil"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "VÆLG = Indstil"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "VÆLG = Indstil"
     sa9200: "SPIL = Indstil"
   </dest>
   <voice>
