--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -3853,17 +3853,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Tastenbeleuchtungsdauer"
-    fuze,e200*: "Scrollradbeleuchtungsdauer"
+    fuze*,e200*: "Scrollradbeleuchtungsdauer"
   </dest>
   <voice>
     *: none
     button_light: "Tastenbeleuchtungsdauer"
-    fuze,e200*: "Scrollradbeleuchtungsdauer"
+    fuze*,e200*: "Scrollradbeleuchtungsdauer"
   </voice>
 </phrase>
 <phrase>
@@ -4170,7 +4170,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4181,7 +4181,7 @@
     h100,h120,h300: "STOP = Abbrechen"
     ipod*,c200*,sa9200: "MENU = Abbrechen"
     x5,m5: "RECORD = Abbrechen"
-    h10,h10_5gb,e200*: "PREV = Abbrechen"
+    h10,h10_5gb,e200*,fuze*: "PREV = Abbrechen"
     gigabeatf: "POWER = Abbrechen"
     mrobe100: "DISPLAY = Abbrechen"
     gigabeats: "BACK = Abbrechen"
@@ -6947,19 +6947,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Festplatte"
-    e200*,c200*: "Micro-SD-Karte"
+    e200*,c200*,fuze*: "Micro-SD-Karte"
     ondio*: "Multimediakarte"
   </voice>
 </phrase>
