--- a/apps/lang/eesti.lang
+++ b/apps/lang/eesti.lang
@@ -4897,7 +4897,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*: "MENU = Revert"
     x5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
   </source>
   <dest>
@@ -4905,7 +4905,7 @@
     h100,h120,h300: "STOP tagasi pöördumiseks"
     ipod*,c200*: "MENU tagasi pöördumiseks"
     x5: "RECORD tagasi pöördumiseks"
-    h10,h10_5gb,e200*: "PREV tagasi pöördumiseks"
+    h10,h10_5gb,e200*,fuze*: "PREV tagasi pöördumiseks"
     gigabeatf: "POWER tagasi pöördumiseks"
   </dest>
   <voice>
