--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -2986,7 +2986,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -2997,7 +2997,7 @@
     h100,h120,h300: "STOP = Cancelar"
     ipod*,c200*,sa9200: "MENU = Cancelar"
     x5,m5: "RECORD = Cancelar"
-    h10,h10_5gb,e200*: "PREV = Cancelar"
+    h10,h10_5gb,e200*,fuze*: "PREV = Cancelar"
     gigabeatf: "POWER = Cancelar"
     mrobe100: "DISPLAY = Cancelar"
     gigabeats: "BACK = Cancelar"
@@ -8002,19 +8002,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "m S D"
+    e200*,c200*,fuze*: "m S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -11142,17 +11142,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Tiempo de espera en la luz del botón"
-    fuze,e200*: "Tiempo de espera en la luz de la rueda"
+    fuze*,e200*: "Tiempo de espera en la luz de la rueda"
   </dest>
   <voice>
     *: none
     button_light: "Tiempo de espera en la luz del botón"
-    fuze,e200*: "Tiempo de espera en la luz de la rueda"
+    fuze*,e200*: "Tiempo de espera en la luz de la rueda"
   </voice>
 </phrase>
 <phrase>
