--- a/apps/lang/greek.lang
+++ b/apps/lang/greek.lang
@@ -3838,17 +3838,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Χρόνος σβησίματος πλήκτρων"
-    fuze,e200*: "Χρόνος σβησίματος τροχού"
+    fuze*,e200*: "Χρόνος σβησίματος τροχού"
   </dest>
   <voice>
     *: none
     button_light: "Χρόνος σβησίματος πλήκτρων"
-    fuze,e200*: "Χρόνος σβησίματος τροχού"
+    fuze*,e200*: "Χρόνος σβησίματος τροχού"
   </voice>
 </phrase>
 <phrase>
@@ -4152,7 +4152,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4163,7 +4163,7 @@
     h100,h120,h300: "STOP = Ακύρωση"
     ipod*,c200*,sa9200: "MENU = Ακύρωση"
     x5,m5: "RECORD = Ακύρωση"
-    h10,h10_5gb,e200*: "PREV = Ακύρωση"
+    h10,h10_5gb,e200*,fuze*: "PREV = Ακύρωση"
     gigabeatf: "POWER = Ακύρωση"
     mrobe100: "DISPLAY = Ακύρωση"
     gigabeats: "BACK = Ακύρωση"
@@ -6927,19 +6927,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Έιτς Ντι 1"
-    e200*,c200*: "μάικρο Ες Ντι"
+    e200*,c200*,fuze*: "μάικρο Ες Ντι"
     ondio*: "Εμ Εμ Σι"
   </voice>
 </phrase>
