--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -263,13 +263,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Sì"
     h100,h120,h300: "NAVI = Sì"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "SELECT = Sì"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Sì"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2386,7 +2386,7 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200*: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Building database... %d found (PREV to return)"
     sa9200: "Building database... %d found (REW to return)"
   </source>
   <dest>
@@ -2394,7 +2394,7 @@
     h100,h120,h300: "Costruzione database... %d trovato (STOP per uscire)"
     ipod*: "Costruzione database... %d trovato (PREV per uscire)"
     x5,m5,gigabeat*,mrobe100: "Costruzione database... %d trovato (LEFT per uscire)"
-    h10,h10_5gb,e200*,c200*: "Costruzione database... %d trovato (PREV per uscire)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Costruzione database... %d trovato (PREV per uscire)"
     sa9200: "Costruzione database... %d trovato (REW per uscire)"
   </dest>
   <voice>
@@ -3855,17 +3855,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Tempo di spegnimento illuminazione tasti"
-    fuze,e200*: "Tempo di spegnimento illuminazione rotella"
+    fuze*,e200*: "Tempo di spegnimento illuminazione rotella"
   </dest>
   <voice>
     *: none
     button_light: "Tempo di spegnimento illuminazione tasti"
-    fuze,e200*: "Tempo di spegnimento illuminazione rotella"
+    fuze*,e200*: "Tempo di spegnimento illuminazione rotella"
   </voice>
 </phrase>
 <phrase>
@@ -4147,14 +4147,14 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Set"
     sa9200: "PLAY = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Imposta"
     h100,h120,h300: "NAVI = Imposta"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "SELECT = Imposta"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Imposta"
     sa9200: "PLAY = Imposta"
   </dest>
   <voice>
@@ -4172,7 +4172,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4184,7 +4184,7 @@
     h100,h120,h300: "STOP = Annulla"
     ipod*,c200*: "MENU = Annulla"
     x5,m5: "RECORD = Annulla"
-    h10,h10_5gb,e200*: "PREV = Annulla"
+    h10,h10_5gb,e200*,fuze*: "PREV = Annulla"
     gigabeatf: "POWER = Annulla"
     mrobe100: "DISPLAY = Annulla"
     gigabeats: "BACK = Annulla"
@@ -6951,19 +6951,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "MSD:"
+    e200*,c200*,fuze*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "HD 1"
-    e200*,c200*: "Micro SD"
+    e200*,c200*,fuze*: "Micro SD"
     ondio*: "M M C"
   </voice>
 </phrase>
