--- a/apps/lang/magyar.lang
+++ b/apps/lang/magyar.lang
@@ -3832,17 +3832,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Gomb világításának hossza"
-    fuze,e200*: "Kerék világításának hossza"
+    fuze*,e200*: "Kerék világításának hossza"
   </dest>
   <voice>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </voice>
 </phrase>
 <phrase>
@@ -4147,7 +4147,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4158,7 +4158,7 @@
     h100,h120,h300: "STOP = mégsem"
     ipod*,c200*,sa9200: "MENU = mégsem"
     x5,m5: "RECORD = mégsem"
-    h10,h10_5gb,e200*: "PREV = mégsem"
+    h10,h10_5gb,e200*,fuze*: "PREV = mégsem"
     gigabeatf: "POWER = mégsem"
     mrobe100: "DISPLAY = mégsem"
     gigabeats: "VISSZA = mégsem"
@@ -6923,18 +6923,18 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD"
+    e200*,c200*,fuze*: "mSD"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
-    e200*,c200*: "micro Secure Digital card:"
+    e200*,c200*,fuze*: "micro Secure Digital card:"
     ondio*: "Multimedia card"
   </voice>
 </phrase>
