--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -4444,19 +4444,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "Multimedia kaart"
   </voice>
 </phrase>
@@ -4591,7 +4591,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4602,7 +4602,7 @@
     h100,h120,h300: "STOP = terugzetten"
     ipod*,c200*,sa9200: "MENU = terugzetten"
     x5,m5: "RECORD = terugzetten"
-    h10,h10_5gb,e200*: "PREV = terugzetten"
+    h10,h10_5gb,e200*,fuze*: "PREV = terugzetten"
     gigabeatf: "POWER = terugzetten"
     mrobe100: "DISPLAY = terugzetten"
     gigabeats: "BACK = terugzetten"
@@ -10277,17 +10277,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Knoppen Licht Vertraging"
-    fuze,e200*: "Wiel Licht Vertraging"
+    fuze*,e200*: "Wiel Licht Vertraging"
   </dest>
   <voice>
     *: none
     button_light: "Knoppen Licht Vertraging"
-    fuze,e200*: "Wiel Licht Vertraging"
+    fuze*,e200*: "Wiel Licht Vertraging"
   </voice>
 </phrase>
 <phrase>
