--- a/apps/lang/norsk-nynorsk.lang
+++ b/apps/lang/norsk-nynorsk.lang
@@ -4382,12 +4382,12 @@
   user: core
   <source>
     *: none
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
   </dest>
   <voice>
     *: none
@@ -4521,7 +4521,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "A = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4532,7 +4532,7 @@
     h100,h120,h300: "STOPP = tilbakestill"
     ipod*,c200*,sa9200: "MENY = tilbakestill"
     x5,m5: "OPPTAK = tilbakestill"
-    h10,h10_5gb,e200*: "TILBAKE = tilbakestill"
+    h10,h10_5gb,e200*,fuze*: "TILBAKE = tilbakestill"
     gigabeatf: "A = tilbakestill"
     mrobe100: "VIS = tilbakestill"
     gigabeats: "TILBAKE = tilbakestill"
@@ -9871,17 +9871,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Avbrotstid for knappelys"
-    fuze,e200*: "Avbrotstid for hjullys"
+    fuze*,e200*: "Avbrotstid for hjullys"
   </dest>
   <voice>
     *: none
     button_light: "Avbrotstid for knappelys"
-    fuze,e200*: "Avbrotstid for hjullys"
+    fuze*,e200*: "Avbrotstid for hjullys"
   </voice>
 </phrase>
 <phrase>
