--- a/apps/lang/portugues-brasileiro.lang
+++ b/apps/lang/portugues-brasileiro.lang
@@ -3851,17 +3851,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Duração da Luz do Botão"
-    fuze,e200*: "Duração da Luz da Roda"
+    fuze*,e200*: "Duração da Luz da Roda"
   </dest>
   <voice>
     *: none
     button_light: "Duração da Luz do Botão"
-    fuze,e200*: "Duração da Luz da Roda"
+    fuze*,e200*: "Duração da Luz da Roda"
   </voice>
 </phrase>
 <phrase>
@@ -4166,7 +4166,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4177,7 +4177,7 @@
     h100,h120,h300: "STOP = Reverter"
     ipod*,c200*,sa9200: "MENU = Reverter"
     x5,m5: "RECORD = Reverter"
-    h10,h10_5gb,e200*: "PREV = Reverter"
+    h10,h10_5gb,e200*,fuze*: "PREV = Reverter"
     gigabeatf: "POWER = Reverter"
     mrobe100: "DISPLAY = Reverter"
     gigabeats: "BACK = Reverter"
@@ -6943,19 +6943,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "MSD:"
+    e200*,c200*,fuze*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
