--- a/apps/lang/portugues.lang
+++ b/apps/lang/portugues.lang
@@ -4130,19 +4130,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -4260,7 +4260,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4271,7 +4271,7 @@
     h100,h120,h300: "STOP Para Reverter"
     ipod*,c200*,sa9200: "MENU Para Reverter"
     x5,m5: "RECORD Para Reverter"
-    h10,h10_5gb,e200*: "PREV Para Reverter"
+    h10,h10_5gb,e200*,fuze*: "PREV Para Reverter"
     gigabeatf: "POWER Para Reverter"
     mrobe100: "DISPLAY Para Reverter"
     gigabeats: "BACK Para Reverter"
