--- a/apps/lang/romaneste.lang
+++ b/apps/lang/romaneste.lang
@@ -1519,7 +1519,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -1530,7 +1530,7 @@
     h100,h120,h300: "STOP pentru anulare"
     ipod*,c200*,sa9200: "MENU pentru anulare"
     x5,m5: "RECORD pentru anulare"
-    h10,h10_5gb,e200*: "PREV pentru anulare"
+    h10,h10_5gb,e200*,fuze*: "PREV pentru anulare"
     gigabeatf: "POWER pentru anulare"
     mrobe100: "DISPLAY pentru anulare"
     gigabeats: "BACK  pentru anulare"
@@ -8982,19 +8982,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -10287,17 +10287,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Timp iluminare butoane"
-    fuze,e200*: "Timp iluminare rotita"
+    fuze*,e200*: "Timp iluminare rotita"
   </dest>
   <voice>
     *: none
     button_light: "Timp iluminare butoane"
-    fuze,e200*: "Timp iluminare rotita"
+    fuze*,e200*: "Timp iluminare rotita"
   </voice>
 </phrase>
 <phrase>
