--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -4088,19 +4088,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Эйч Ди 1"
-    e200*,c200*: "микро Эс Ди"
+    e200*,c200*,fuze*: "микро Эс Ди"
     ondio*: "Эм Эм Си"
   </voice>
 </phrase>
@@ -4235,7 +4235,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4246,7 +4246,7 @@
     h100,h120,h300: "СТОП = Отмена"
     ipod*,c200*,sa9200: "МЕНЮ = Отмена"
     x5,m5: "ЗАПИСЬ = Отмена"
-    h10,h10_5gb,e200*: "ПРЕД. = Отмена"
+    h10,h10_5gb,e200*,fuze*: "ПРЕД. = Отмена"
     gigabeatf: "ВЫКЛ. = Отмена"
     mrobe100: "ПОКАЗ. = Отмена"
     gigabeats: "НАЗАД = Отмена"
@@ -10928,17 +10928,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Таймаут подсветки клавиш"
-    fuze,e200*: "Таймаут подсветки колёсика"
+    fuze*,e200*: "Таймаут подсветки колёсика"
   </dest>
   <voice>
     *: none
     button_light: "Таймаут подсветки клавиш"
-    fuze,e200*: "Таймаут подсветки колёсика"
+    fuze*,e200*: "Таймаут подсветки колёсика"
   </voice>
 </phrase>
 <phrase>
