--- a/apps/lang/srpski.lang
+++ b/apps/lang/srpski.lang
@@ -3841,17 +3841,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Тајмаут светла за дугмиће"
-    fuze,e200*: "Тајмаут светла за точак"
+    fuze*,e200*: "Тајмаут светла за точак"
   </dest>
   <voice>
     *: none
     button_light: "Тајмаут светла за дугмиће"
-    fuze,e200*: "Тајмаут светла за точак"
+    fuze*,e200*: "Тајмаут светла за точак"
   </voice>
 </phrase>
 <phrase>
@@ -4158,7 +4158,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4169,7 +4169,7 @@
     h100,h120,h300: "STOP = Врати на старо"
     ipod*,c200*,sa9200: "MENU = Врати на старо"
     x5,m5: "RECORD = Врати на старо"
-    h10,h10_5gb,e200*: "PREV = Врати на старо"
+    h10,h10_5gb,e200*,fuze*: "PREV = Врати на старо"
     gigabeatf: "POWER = Врати на старо"
     mrobe100: "DISPLAY = Врати на старо"
     gigabeats: "BACK = Врати на старо"
@@ -6942,19 +6942,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "мајкро Ес Де"
+    e200*,c200*,fuze*: "мајкро Ес Де"
     ondio*: "M M C"
   </voice>
 </phrase>
