--- a/apps/lang/svenska.lang
+++ b/apps/lang/svenska.lang
@@ -3857,17 +3857,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Knappbelysning"
-    fuze,e200*: "Hjulbelysning"
+    fuze*,e200*: "Hjulbelysning"
   </dest>
   <voice>
     *: none
     button_light: "Knappbelysning"
-    fuze,e200*: "Hjulbelysning"
+    fuze*,e200*: "Hjulbelysning"
   </voice>
 </phrase>
 <phrase>
@@ -4172,7 +4172,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4183,7 +4183,7 @@
     h100,h120,h300: "STOPP = Avbryt"
     ipod*,c200*,sa9200: "MENY = Avbryt"
     x5,m5: "SPELA IN = Avbryt"
-    h10,h10_5gb,e200*: "FÖREGÅENDE = Avbryt"
+    h10,h10_5gb,e200*,fuze*: "FÖREGÅENDE = Avbryt"
     gigabeatf: "PÅ/AV = Avbryt"
     mrobe100: "VISA = Avbryt"
     gigabeats: "BAKÅT = Avbryt"
@@ -6949,19 +6949,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "mikro S D"
+    e200*,c200*,fuze*: "mikro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
