--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -3838,17 +3838,17 @@
  <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
  </source>
  <dest>
     *: none
     button_light: "Pahintuin buttones sa ilaw"
-    fuze,e200*: "Pahintuin gulong sa ilaw"
+    fuze*,e200*: "Pahintuin gulong sa ilaw"
  </dest>
  <voice>
     *: none
     button_light: ""
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
  </voice>
 </phrase>
 <phrase>
@@ -4155,7 +4155,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4166,7 +4166,7 @@
     h100,h120,h300: "STOP = Mabalik"
     ipod*,c200*,sa9200: "MENU = Mabalik"
     x5,m5: "RECORD = Mabalik"
-    h10,h10_5gb,e200*: "PREV = Mabalik"
+    h10,h10_5gb,e200*,fuze*: "PREV = Mabalik"
     gigabeatf: "POWER = Mabalik"
     mrobe100: "DISPLAY = Mabalik"
     gigabeats: "BACK = Mabalik"
@@ -10114,19 +10114,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1:"
-    e200*,c200*: "MSD:"
+    e200*,c200*,fuze*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D Isa"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
