--- a/apps/lang/thai.lang
+++ b/apps/lang/thai.lang
@@ -3835,17 +3835,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "เวลาเปิดไฟปุ่ม"
-    fuze,e200*: "เวลาเปิดไฟล้อหมุน"
+    fuze*,e200*: "เวลาเปิดไฟล้อหมุน"
   </dest>
   <voice>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </voice>
 </phrase>
 <phrase>
@@ -4132,7 +4132,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4143,7 +4143,7 @@
     h100,h120,h300: "STOP = ยกเลิก"
     ipod*,c200*,sa9200: "MENU = ยกเลิก"
     x5,m5: "RECORD = ยกเลิก"
-    h10,h10_5gb,e200*: "PREV = ยกเลิก"
+    h10,h10_5gb,e200*,fuze*: "PREV = ยกเลิก"
     gigabeatf: "POWER = ยกเลิก"
     mrobe100: "DISPLAY = ยกเลิก"
     gigabeats: "BACK = ยกเลิก"
@@ -6907,19 +6907,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200*: "micro Secure Digital card:"
+    e200*,c200*,fuze*: "micro Secure Digital card:"
     ondio*: "Multimedia card"
   </voice>
 </phrase>
