--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -3856,17 +3856,17 @@
   <source>
     *: none
     button_light: "Button Light Timeout"
-    fuze,e200*: "Wheel Light Timeout"
+    fuze*,e200*: "Wheel Light Timeout"
   </source>
   <dest>
     *: none
     button_light: "Tins k' les botons s' loumèt"
-    fuze,e200*: "Tins ki l' rôlete si loume"
+    fuze*,e200*: "Tins ki l' rôlete si loume"
   </dest>
   <voice>
     *: none
     button_light: "Tins k' les botons s' loumèt"
-    fuze,e200*: "Tins ki l' rôlete si loume"
+    fuze*,e200*: "Tins ki l' rôlete si loume"
   </voice>
 </phrase>
 <phrase>
@@ -4171,7 +4171,7 @@
     h100,h120,h300: "STOP = Revert"
     ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
-    h10,h10_5gb,e200*: "PREV = Revert"
+    h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
@@ -4182,7 +4182,7 @@
     h100,h120,h300: "STOP = Rinoncî"
     ipod*,c200*,sa9200: "MENU = Rinoncî"
     x5,m5: "RECORD = Rinoncî"
-    h10,h10_5gb,e200*: "PREV = Rinoncî"
+    h10,h10_5gb,e200*,fuze*: "PREV = Rinoncî"
     gigabeatf: "POWER = Rinoncî"
     mrobe100: "DISPLAY = Rinoncî"
     gigabeats: "BACK = Rinoncî"
@@ -6948,19 +6948,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200*: "mSD:"
+    e200*,c200*,fuze*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "DP1"
-    e200*,c200*: "MSD:"
+    e200*,c200*,fuze*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "D P 1"
-    e200*,c200*: "micro S D"
+    e200*,c200*,fuze*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
