--- a/manual/getting_started/iaudio_install.tex
+++ b/manual/getting_started/iaudio_install.tex
@@ -14,5 +14,6 @@ Rockbox bootloader can therefore be very minimalistic, as it does not require
   \opt{x5}{Use the \fname{x5v\_fw.bin} file if your \dap{} is a X5V. If it is a X5
     or X5L, use the \fname{x5\_fw.bin} file.}
   \opt{m5}{Use the \fname{m5\_fw.bin} file.}
+  \opt{m3}{Use the \fname{cowon\_m3.bin} file.}
 \item Copy it to the \fname{FIRMWARE} directory on your \dap{}.
 \end{itemize}
