Swap order of H100 remote keys in a table.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21655 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/rockbox_interface/browsing_and_playing.tex
+++ b/manual/rockbox_interface/browsing_and_playing.tex
@@ -53,7 +53,7 @@ the \setting{Show Files} setting to all.
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD}
         {
           \ButtonOn+\ButtonUp{}/ \ButtonDown
-          \opt{IRIVER_RC_H100_PAD}{& \ButtonRCBitrate{}/ \ButtonRCSource}
+          \opt{IRIVER_RC_H100_PAD}{& \ButtonRCSource{}/ \ButtonRCBitrate}
           & Move one page up/down in the list.\\
         }
       \opt{IRIVER_H10_PAD}
